# fullon_ohlcv_api

./: .env  .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  COMPATIBILITY_ANALYSIS.md  CONTRIBUTING.md  FULLON_OHLCV_API_REFERENCE.md  GEMINI.md  Makefile  PROJECT_STRUCTURE.md  README.md  env.example  explore_fullon_ohlcv.py  git_issues_rules.md  pyproject.toml  run_test.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
docs/: FULLON_OHLCV_LLM_QUICKSTART.md  FULLON_OHLCV_METHOD_REFERENCE.md  MASTER_API_INTEGRATION.md  PROJECT_STRUCTURE.md
examples/: API_SPECIFICATION.md  README.md  README_DEMO_DATA.md  SETUP_COMPLETE.md  basic_usage.py  candle_repository_example.py  demo_data.py  fill_data_examples.py  library_usage.py  run_all.py  run_all_sdk.py  run_filler_example.py  timeseries_repository_example.py  trade_repository_example.py  websocket_live_ohlcv_example.py
examples/sdk/: candle_repository_sdk_example.py  timeseries_repository_sdk_example.py  trade_repository_sdk_example.py  websocket_live_ohlcv_sdk_example.py
fullon_ohlcv_tests/: __init__.py  conftest.py  factories.py
fullon_ohlcv_tests/database/repositories/: __init__.py
fullon_ohlcv_tests/database/repositories/ohlcv/: __init__.py
sdk/: README.md  pyproject.toml
sdk/examples/: candle_repository_sdk_example.py  run_all_sdk.py  timeseries_repository_sdk_example.py  trade_repository_sdk_example.py  websocket_live_ohlcv_sdk_example.py
sdk/fullon_ohlcv_sdk/: __init__.py  client.py  exceptions.py  models.py  websocket.py
src/fullon_ohlcv_api/: __init__.py  gateway.py  main.py  standalone_server.py
src/fullon_ohlcv_api/dependencies/: __init__.py  database.py
src/fullon_ohlcv_api/models/: __init__.py  requests.py  responses.py
src/fullon_ohlcv_api/routers/: __init__.py  candles.py  exchanges.py  symbols.py  timeseries.py  trades.py  websocket.py
tests/: __init__.py  conftest.py  factories.py  test_main.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_dependencies.py  test_models.py
